2008-08-04  Mark Rowe  <mrowe@apple.com>

        Reviewed by Kevin Decker.

        Adopt the formal protocols where necessary.
        Final part of fix for <rdar://problem/5853147>.

        * WebCoreSupport/WebInspectorClient.mm:
        * WebView/WebHTMLView.mm:
        * WebView/WebView.mm:
        (-[WebView _openFrameInNewWindowFromMenu:]):

2008-08-04  Mark Rowe  <mrowe@apple.com>

        Reviewed by Darin Adler.

        Declare empty protocols when using versions of AppKit that do not use formal protocols for delegates and data sources.
        Part one of fix for <rdar://problem/5853147>.

        * Misc/EmptyProtocolDefinitions.h:
        * WebKitPrefix.h:

2008-08-04  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitz Pettel

        Fix <rdar://problem/5820157> - Saving WebArchives of Mail attachments broken.

        This broke in r31355 when we stopped returning nil WebResources when there was nil
        resource data.

        * WebView/WebResource.mm:
        (-[WebResource _initWithCoreResource:]): Restore previous behavior of returning nil
          when the resource data is null.

2008-08-02  Matt Lilek  <webkit@mattlilek.com>

        Reviewed by Tim Hatcher.

        Update the window gradient offset to match the inspector toolbar's new height.

        * WebCoreSupport/WebInspectorClient.mm:
        (-[WebInspectorWindowController window]):

2008-08-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Jon.

        <rdar://problem/6120206>
        Crash when plug-in queries for NPPVpluginWantsAllNetworkStreams.
        
        Pass in a pointer to a void* to make sure that plug-ins don't overwrite the stack.

        * Plugins/WebBaseNetscapePluginStream.mm:
        (-[WebBaseNetscapePluginStream wantsAllStreams]):

2008-07-31  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        <rdar://problem/5949410>
        Add the ability to transfer a given application cache to a new database.
