@@ -1,5 +1,11 @@
 2008-08-04  Mark Rowe  <mrowe@apple.com>
 
+        Build fix.
+
+        * WebView/WebHTMLView.mm:
+
+2008-08-04  Mark Rowe  <mrowe@apple.com>
+
         Reviewed by Kevin Decker.
 
         Adopt the formal protocols where necessary.
